# json-typedef-codegen

./: .gitignore  CHANGELOG.md  README.md
crates/core/: Cargo.toml
crates/core/src/codegen/: ast.rs
crates/target_csharp_system_text/: Cargo.toml
crates/target_csharp_system_text/docker/: Program.cs
crates/target_csharp_system_text/output/basic_discriminator/: BasicDiscriminator.cs  BasicDiscriminatorBarBaz.cs  BasicDiscriminatorQuux.cs  Root.cs  RootBarBaz.cs  RootQuux.cs
crates/target_csharp_system_text/output/basic_enum/: BasicEnum.cs  Root.cs
crates/target_csharp_system_text/output/basic_properties/: BasicProperties.cs  Root.cs
crates/target_csharp_system_text/output/custom_overrides/: CustomOverrides.cs  CustomOverridesOverrideTypeDiscriminatorBaz.cs  Root.cs  RootOverrideTypeDiscriminatorBaz.cs
crates/target_csharp_system_text/output/definition_name_collisions/: Bar.cs  Bar0.cs  DefinitionNameCollisions.cs  Foo0.cs  Root.cs
crates/target_csharp_system_text/output/description/: Baz.cs  Description.cs  DescriptionDiscriminatorWithDescription.cs  DescriptionDiscriminatorWithDescriptionBar.cs  DescriptionEnumWithDescription.cs  DescriptionPropertiesWithDescription.cs  Root.cs  RootDiscriminatorWithDescription.cs  RootDiscriminatorWithDescriptionBar.cs  RootEnumWithDescription.cs  RootPropertiesWithDescription.cs
crates/target_csharp_system_text/output/discriminator_optional_properties/: DiscriminatorOptionalProperties.cs  DiscriminatorOptionalPropertiesBar.cs  Root.cs  RootBar.cs
crates/target_csharp_system_text/output/elements/: Elements.cs
crates/target_csharp_system_text/output/empty_and_nonascii_definitions/: DefaultName.cs  Foo.cs  Foo0.cs  Foo0bar.cs  (+6 more)
crates/target_csharp_system_text/src/: lib.rs
crates/target_java_jackson/: Cargo.toml
crates/target_java_jackson/src/: lib.rs
crates/target_java_jackson/templates/: UnsignedByte  UnsignedInteger  UnsignedShort
crates/target_rust/docker/: Cargo.toml  Dockerfile  main.rs
crates/test/: Cargo.toml
crates/test/src/: lib.rs
(+515 files in other folders)
