[package]
name = "jetted_core"
version = "0.1.0"
authors = [
    "Isaac Harris-Holt <isaac@documatic.com>",
    "Ulysse Carion <ulysse@segment.com>",
]
edition = "2018"
description = "A framework for generating code from JSON Typedef schemas"
license = "MIT"

[dependencies]
thiserror = "1.0.22"
teeter_inflector = { version = "0.11.4", package = "Inflector" }
jtd = "0.2.1"
serde_json = "1.0"
textwrap = "0.13"
