[package]
name = "jetted_target_java_jackson"
version = "0.1.0"
authors = [
    "Isaac Harris-Holt <isaac@documatic.com>",
    "Ulysse Carion <ulysse@segment.com>",
]
edition = "2018"

[dependencies]
jetted_core = { path = "../core" }
lazy_static = "1.4.0"
askama = "0.8"
serde_json = "1.0"

[dev-dependencies]
jetted_test = { path = "../test" }
