[package]
name = "jetted_test"
version = "0.1.0"
authors = [
    "Isaac Harris-Holt <isaac@documatic.com>",
    "Ulysse Carion <ulysse@segment.com>",
]
edition = "2018"

[dependencies]
jetted_core = { path = "../core" }
jtd = "0.2.1"
serde_json = "1.0"
tempfile = "3"
jtd-fuzz = "0.1.21"
rand = "0.7"
rand_pcg = "0.2"
difference = "2.0"
