[package]
name = "jetted_e2e_test"
version = "0.1.0"
authors = [
    "Isaac Harris-Holt <isaac@documatic.com>",
    "Ulysse Carion <ulysse@segment.com>",
]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
